fix(document): move icon higher for better alignment

--- a/assets/app/main.css
+++ b/assets/app/main.css
@@ -145,7 +145,7 @@ img{
     height: 18px;
     filter: brightness(2);
     position: relative;
-    top: -2px;
+    top: -4px;
 }
 
 .bottom_update{
